# aisix

./: Cargo.toml  build.rs  config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yaml  notify-build.yaml
ci/: smoke-test.sh
crates/admin-ui/ui/: package.json
crates/aisix-admin/: Cargo.toml  build.rs
crates/aisix-admin/src/: catalog.rs  lib.rs  ui.rs
crates/aisix-admin/src/api/: apikeys.rs  catalog.rs  guardrails.rs  mod.rs  models.rs  playground.rs  policies.rs  providers.rs  types.rs
crates/aisix-admin/ui/: .prettierrc  eslint.config.js  index.html  tsconfig.app.json  ui.pen  vite.config.ts
crates/aisix-admin/ui/src/: index.css  main.tsx
crates/aisix-admin/ui/src/components/: theme-provider.tsx
crates/aisix-admin/ui/src/components/apikeys/: apikey-form.tsx
crates/aisix-admin/ui/src/components/guardrails/: guardrail-form.tsx
crates/aisix-admin/ui/src/components/layout/: admin-key-modal.tsx  page-header.tsx
crates/aisix-admin/ui/src/components/models/: model-form.tsx
crates/aisix-admin/ui/src/components/playground/: api-key-picker.tsx  api.ts  column-panel.tsx  model-picker.tsx  msg-card.tsx  params-popover.tsx  picker-styles.ts  state.ts  types.ts
crates/aisix-admin/ui/src/components/providers/: provider-form.tsx
crates/aisix-admin/ui/src/components/ui/: data-table.tsx  monaco-json-editor.tsx  sheet.tsx
crates/aisix-admin/ui/src/hooks/: use-admin-key.ts  use-sidebar.ts
crates/aisix-admin/ui/src/i18n/: index.ts
crates/aisix-admin/ui/src/i18n/locales/: en.json  zh-CN.json
crates/aisix-admin/ui/src/lib/api/: client.ts  types.ts
crates/aisix-admin/ui/src/lib/queries/: apikeys.ts  catalog.ts  guardrails.ts  models.ts  policies.ts
crates/aisix-admin/ui/src/routes/: __root.tsx  _layout.tsx  index.tsx
crates/aisix-admin/ui/src/routes/_layout/: settings.tsx
crates/aisix-admin/ui/src/routes/_layout/apikeys/: $id.tsx  create.tsx  index.tsx
crates/aisix-admin/ui/src/routes/_layout/guardrails/: $id.tsx  create.tsx  index.tsx
crates/aisix-admin/ui/src/routes/_layout/models/: $id.tsx  create.tsx  index.tsx
crates/aisix-admin/ui/src/routes/_layout/playground/: index.tsx
crates/aisix-admin/ui/src/routes/_layout/policies/: $id.tsx  index.tsx
crates/aisix-admin/ui/src/routes/_layout/providers/: index.tsx
crates/aisix-config/: Cargo.toml
crates/aisix-config/src/: lib.rs  types.rs
crates/aisix-config/src/entities/: apikeys.rs  guardrails.rs  mod.rs  models.rs  policies.rs  providers.rs
crates/aisix-core/: Cargo.toml
crates/aisix-core/src/entities/: apikeys-schema.json  apikeys.rs  guardrails-schema.json  guardrails.rs  mod.rs  models-schema.json  models.rs  policies-schema.json  policies.rs  providers.rs  types.rs
crates/aisix-guardrail/: Cargo.toml
crates/aisix-guardrail/src/: lib.rs  traits.rs
crates/aisix-guardrail/src/guardrails/: bedrock.rs  mod.rs
crates/aisix-llm/src/: gateway.rs  lib.rs
crates/aisix-observability/: Cargo.toml
crates/aisix-observability/src/: lib.rs  metrics.rs  observability.rs
crates/aisix-proxy/: Cargo.toml
crates/aisix-proxy/src/: guardrails.rs  lib.rs  message_history.rs  policies.rs  provider.rs
crates/aisix-proxy/src/guardrails/: streaming.rs
crates/aisix-proxy/src/handlers/: format_handler.rs  mod.rs  models.rs  openai_error.rs
crates/aisix-proxy/src/handlers/chat_completions/: mod.rs  types.rs
crates/aisix-proxy/src/handlers/chat_completions/span_attributes/: message_attributes.rs  stream_output.rs  telemetry.rs  tests.rs
crates/aisix-proxy/src/handlers/embeddings/: mod.rs  span_attributes.rs  types.rs
crates/aisix-proxy/src/handlers/messages/: mod.rs  types.rs
crates/aisix-proxy/src/handlers/messages/span_attributes/: message_attributes.rs  mod.rs  stream_output.rs  telemetry.rs  tests.rs
crates/aisix-proxy/src/handlers/responses/: mod.rs  runtime.rs  types.rs
crates/aisix-proxy/src/handlers/responses/span_attributes/: message_attributes.rs  mod.rs  stream_output.rs  telemetry.rs  tests.rs
crates/aisix-proxy/src/hooks/: context.rs  mod.rs
crates/aisix-proxy/src/hooks/authorization/: mod.rs
crates/aisix-proxy/src/hooks/observability/: mod.rs
crates/aisix-proxy/src/hooks/rate_limit/: mod.rs
crates/aisix-proxy/src/hooks/rate_limit/concurrent/: local.rs  mod.rs  utils.rs
crates/aisix-proxy/src/hooks/rate_limit/ratelimit/: local.rs  mod.rs  utils.rs
crates/aisix-proxy/src/middlewares/: auth.rs  mod.rs
crates/aisix-proxy/src/utils/trace/: mod.rs  span_attributes.rs  span_message_attributes.rs
crates/aisix-utils/: Cargo.toml
crates/aisix-utils/src/: future.rs  instance.rs  jsonschema.rs  lib.rs
src/: lib.rs  main.rs
src/admin/: apikeys.rs  guardrails.rs  mod.rs  models.rs  policies.rs  providers.rs
src/config/: etcd.rs  mod.rs  types.rs
src/config/entities/: apikeys.rs  guardrails-schema.json  guardrails.rs  mod.rs  models-schema.json  models.rs  policies.rs  providers-schema.json  providers.rs
src/gateway/: gateway.rs  provider_instance.rs
src/gateway/formats/: mod.rs
src/gateway/providers/: azure.rs  bedrock.rs  fireworks.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  modelscope.rs  openrouter.rs  stepfun.rs  xai.rs  zhipuai.rs
src/gateway/streams/: mod.rs
src/gateway/traits/: chat_format.rs  mod.rs  native.rs  provider.rs
src/gateway/types/: bedrock.rs  mod.rs
src/proxy/: guardrails.rs  message_history.rs  mod.rs  policies.rs  provider.rs
src/proxy/handlers/: format_handler.rs  mod.rs  models.rs  openai_error.rs
src/proxy/hooks/: context.rs
tests/: package.json
tests/admin/: catalog.test.ts  guardrails.test.ts  models.test.ts  policies.test.ts
tests/fixtures/: bedrock-mock-upstream.ts  mock-upstream.ts
tests/proxy/: bedrock-chat-completions.test.ts  chat-completions-sim.test.ts  chat-completions.test.ts  embeddings.test.ts  messages.test.ts  models.test.ts  timeout.test.ts
tests/utils/: admin.ts  bedrock-mock-upstream.ts  mock-upstream.test.ts  mock-upstream.ts  stream-assert.test.ts  stream-assert.ts
ui/: package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: routeTree.gen.ts
(+60 files in other folders)
