[package]
name = "aisix"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
build-ui = []

[dependencies]
log = { version = "0.4.29", features = ["kv", "kv_serde"] }
tokio = { version = "1.52.0", features = ["full", "test-util"] }
reqwest = { version = "0.13", default-features = false, features = [
  "charset",
  "system-proxy",
  "json",
  "stream",
  "native-tls",
] }
openssl = { version = "0.10.77" }
tokio-openssl = "0.6"
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
axum = { version = "0.8.9", features = [
  "http1",
  "json",
  "matched-path",
  "tokio",
  "macros",
], default-features = false }
serde = "1.0.228"
serde_json = "1.0"
etcd-client = { version = "0.18.0", features = ["tls-openssl"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
arc-swap = "1"
anyhow = "1"
fastrace = { version = "0.7.16", features = ["enable"] }
fastrace-axum = "0.2.0"
fastrace-opentelemetry = "0.16.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
fastrace-tracing = "0.1.1"
fastrace-reqwest = "0.3.0"
logforth = { version = "0.29.1", features = [
  "starter-log",
  "diagnostic-fastrace",
  "append-fastrace",
] }
opentelemetry-semantic-conventions = "0.31.0"
metrics = "0.24.2"
metrics-exporter-otel = "0.3.0"
pin-project = "1.1.10"
dashmap = "6.1.0"
thiserror = "2"
skp-ratelimit = { git = "https://github.com/bzp2010/skp-ratelimit.git", branch = "bzp/feat-custom-cost", default-features = false, features = [
  "memory",
] }
rand = "0.10.1"
jsonschema = { version = "0.46.0", default-features = false }
uuid = { version = "1.22.0", features = ["v4"] }
utoipa = "5.4.0"
utoipa-scalar = { version = "0.3", features = ["axum"] }
rust-embed = { version = "8.11.0", default-features = false, features = [
  "axum-ex",
  "debug-embed",
  "deterministic-timestamps",
] }
mime_guess = "2.0.5"
tower = { version = "0.5.3", default-features = false, features = ["util"] }
validator = { version = "0.20", features = ["derive"] }
axum-server = { version = "0.8.0", default-features = false, features = [
  "tls-openssl",
] }
backon = { version = "1.6.0", default-features = false, features = [
  "tokio-sleep",
] }

[build-dependencies]
vergen-git2 = { version = "9.1.0" }
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
pretty_assertions = "1.4"
rstest = "0.26"
tempfile = "3"

[patch.crates-io]
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
