[workspace]
members = ["crates/aisix-core", "crates/aisix-utils", "crates/aisix-observability", "crates/aisix-llm", "crates/aisix-guardrail", "crates/aisix-config", "crates/aisix-admin"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
assert_matches = "1.5"
aws-credential-types = "1.2.14"
aws-sigv4 = { version = "1.4.3", features = ["http1"] }
aws-smithy-eventstream = "0.60.20"
aws-smithy-runtime-api = "1.12.0"
aws-smithy-types = "1.4.7"
axum = { version = "0.8.9", features = [
  "http1",
  "json",
  "matched-path",
  "original-uri",
  "tokio",
  "macros",
], default-features = false }
bytes = "1.0"
cel = "0.13.0"
fastrace = { version = "0.7.16", features = ["enable"] }
futures = "0.3"
http = "1.4.0"
percent-encoding = "2"
pin-project = "1.1.10"
pretty_assertions = "1.4"
reqwest = { version = "0.13", default-features = false, features = [
  "charset",
  "system-proxy",
  "json",
  "stream",
  "native-tls",
] }
regex = "1"
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.52.0", features = ["full", "test-util"] }
utoipa = "5.4.0"
uuid = { version = "1.22.0", features = ["v4"] }

[package]
name = "aisix"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
build-ui = ["aisix-admin/build-ui"]

[dependencies]
aisix-core = { path = "crates/aisix-core" }
aisix-utils = { path = "crates/aisix-utils" }
aisix-observability = { path = "crates/aisix-observability" }
aisix-llm = { path = "crates/aisix-llm" }
aisix-guardrail = { path = "crates/aisix-guardrail" }
aisix-config = { path = "crates/aisix-config" }
aisix-admin = { path = "crates/aisix-admin" }
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
http.workspace = true
axum.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
cel.workspace = true
async-trait.workspace = true
aws-credential-types.workspace = true
aws-sigv4.workspace = true
aws-smithy-eventstream.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
futures.workspace = true
bytes.workspace = true
fastrace.workspace = true
pin-project.workspace = true
thiserror.workspace = true
uuid.workspace = true
utoipa.workspace = true
percent-encoding.workspace = true

log = { version = "0.4.29", features = ["kv", "kv_serde"] }
openssl = { version = "0.10.77" }
tokio-openssl = "0.6"
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15"
http-body = "1.0.1"
http-body-util = "0.1.3"
etcd-client = { version = "0.18.0", features = ["tls-openssl"] }
arc-swap = "1"
fastrace-axum = "0.2.0"
fastrace-tracing = "0.1.1"
fastrace-reqwest = "0.3.0"
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
  "semconv_experimental",
] }
metrics = "0.24.2"
dashmap = "6.1.0"
skp-ratelimit = { git = "https://github.com/bzp2010/skp-ratelimit.git", branch = "bzp/feat-custom-cost", default-features = false, features = [
  "memory",
] }
rand = "0.10.1"
jsonschema = { version = "0.46.0", default-features = false }
utoipa-scalar = { version = "0.3", features = ["axum"] }
rust-embed = { version = "8.11.0", default-features = false, features = [
  "axum-ex",
  "debug-embed",
  "deterministic-timestamps",
] }
tower = { version = "0.5.3", default-features = false, features = ["util"] }
validator = { version = "0.20", features = ["derive"] }
axum-server = { version = "0.8.0", default-features = false, features = [
  "tls-openssl",
] }
backon = { version = "1.6.0", default-features = false, features = [
  "tokio-sleep",
] }
tower-http = { version = "0.6.10", features = ["cors"] }

[build-dependencies]
vergen-git2 = { version = "9.1.0" }
anyhow = "1"

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
tokio-test = "0.4"
rstest = "0.26"
tempfile = "3"

[patch.crates-io]
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }

[profile.release]
lto = "thin"
codegen-units = 1
