[package]
name = "aisix-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
build-ui = []

[dependencies]
aisix-config = { path = "../aisix-config" }
aisix-core = { path = "../aisix-core" }
aisix-utils = { path = "../aisix-utils" }
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
http.workspace = true
mime_guess = "2.0.5"
rust-embed = { version = "8.11.0", default-features = false, features = [
  "axum-ex",
  "debug-embed",
  "deterministic-timestamps",
] }
serde.workspace = true
serde_json.workspace = true
tower = { version = "0.5.3", default-features = false, features = ["util"] }
tower-http = { version = "0.6.10", features = ["cors"] }
utoipa.workspace = true
utoipa-scalar = { version = "0.3", features = ["axum"] }
uuid.workspace = true

[build-dependencies]
anyhow.workspace = true
