[package]
name = "aisix-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aisix-core = { path = "../aisix-core" }
async-trait.workspace = true
anyhow.workspace = true
arc-swap = "1"
log = { version = "0.4.29", features = ["kv", "kv_serde"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
tokio-test = "0.4"
