[package]
name = "aisix-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
fastrace.workspace = true
log = { version = "0.4.29", features = ["kv", "kv_serde"] }
pin-project.workspace = true
tokio.workspace = true
uuid.workspace = true

jsonschema = { version = "0.46.0", default-features = false }

[dev-dependencies]
pretty_assertions.workspace = true
uuid.workspace = true
